<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright 2014 Alexander Wang
    
    This file is part of Ogame on Android.

    Ogame on Android is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Ogame on Android is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Ogame on Android.  If not, see <http://www.gnu.org/licenses/>.
-->
<resources>
    <string name="account_spinner" formatted="false">%s in %s</string>

<!-- AUTO-GENERATED -->
<!-- Add initial account fragment -->
<string name="username">Username</string>
<string name="password">Password</string>
<string name="lang">lang (us, en, fr &#8230;)</string>
<string name="show_password_checkbox">Show password</string>
<string name="universe">Select account\'s universe</string>
<string name="login">Login</string>
<string name="existing_accounts">Existing accounts:</string>
<!-- home.xml string -->
<string name="remove">Remove account</string>
<!-- overview.xml strings -->
<string name="switch_accounts">Switch account</string>
<!-- Main left menu -->
<string name="overview">Overview</string>
<string name="resources">Resources</string>
<string name="buildings">Buildings</string>
<string name="researchs">Researchs</string>
<string name="shipyard">Shipyard</string>
<string name="defenses">Defenses</string>
<!-- OverviewFragment's needed strings -->
<string name="overview_outgoing">-></string>
<string name="overview_incoming">--</string>
<string name="overview_arrived">Complete!</string>
<string name="no_events">No events</string>
<string name="error_msg">Error loading events!</string>
<string name="login_error">Check login username, password, and universe</string>
<string name="reload_button">Refresh</string>
<string name="reload_in_progress">Reload in progress</string>
<!-- resources overview -->
<string name="metal_name">Metal</string>
<string name="crystal_name">Crystal</string>
<string name="deuterium_name">Deuterium</string>
<string name="metal">m</string>
<string name="crystal">c</string>
<string name="deuterium">d</string>
<!-- resources overview - todo improve localized -->
<string name="metal_mine">Metal Mine</string>
<string name="crystal_mine">Crystal Mine</string>
<string name="deuterium_mine">Deuterium Extractor</string>
<string name="solar_power_plant">Solar Power Plant</string>
<string name="fusion_power_plant">Fusion Reactor</string>
<string name="metal_stock">Metal Stock</string>
<string name="crystal_stock">Crystal Stock</string>
<string name="deuterium_stock">Deuterium Stock</string>
<string name="metal_stash">Metal Stash</string>
<string name="crystal_stash">Crystal Stash</string>
<string name="deuterium_stash">Deuterium Stash</string>
<!-- building -->
<string name="robot_factory">Robotic Factory</string>
<string name="spaceship_factory">Shipyard</string>
<string name="laboratory">Research Lab</string>
<string name="supply_depot">Alliance Supply</string>
<string name="missile_silo">Missile Silo</string>
<!-- research -->
<string name="energy">Energy</string>
<string name="laser">Laser</string>
<string name="ion">Ion</string>
<string name="hyperspace">Hyperspace</string>
<string name="plasma">Plasma</string>
<string name="combustion">Combustion</string>
<string name="impulsion">Impulsion</string>
<string name="hyperspace_engine">Hyperspace Engine</string>
<string name="spy">Espionnage</string>
<string name="computer">Computer</string>
<string name="astrophysic">Astrophysic</string>
<string name="intergalactic_network">Intergalactic Network</string>
<string name="graviton">Graviton</string>
<string name="weapon">Weapon</string>
<string name="shield">Shield</string>
<string name="protection">Protection</string>
<!-- ships -->
<string name="lightfighter">L. Fighter</string>
<string name="heavyfighter">H. Fighter</string>
<string name="cruiser">Cruiser</string>
<string name="battleship">Battleship</string>
<string name="smallcargo">S. Cargo</string>
<string name="largecargo">L. Cargo</string>
<string name="colony">Colony</string>
<string name="battlecruiser">B.Cruiser</string>
<string name="bomber">Bomber</string>
<string name="destroyer">Destroyer</string>
<string name="deathstar">Death Start</string>
<string name="recycler">Recycler</string>
<string name="probe">Esp. Probe</string>
<string name="satellite">S. Satellite</string>
<!-- defense -->
<string name="rocket_launcher">Rocket Launcher</string>
<string name="light_laser">Light Laser</string>
<string name="heavy_laser">Heavy Laser</string>
<string name="gauss_cannon">Gauss Cannon</string>
<string name="ion_cannon">Ion Cannon</string>
<string name="plasma_turret">Plasma Turret</string>
<string name="small_shield_dome">Small Shield Dome</string>
<string name="large_shield_dome">Large Shield Dome</string>
<string name="anti_ballistic_missile">Anti Ballistic Missile</string>
<string name="interplanetary_missile">Interplanetary Missile</string>
<!-- servers -->
<string name="antares">Antares</string>
<string name="betelgeuse">Betelgeuse</string>
<string name="electra">Electra</string>
<string name="jupiter">Jupiter</string>
<string name="nekkar">Nekkar</string>
<string name="orion">Orion</string>
<string name="pegasus">Pegasus</string>
<string name="quantum">Quantum</string>
<string name="rigel">Rigel</string>
<string name="sirius">Sirius</string>
<string name="taurus">Taurus</string>
<string name="ursa">Ursa</string>
<string name="vega">Vega</string>
<string name="wasat">Wasat</string>
<string name="xalynth">Xalynth</string>
<string name="yakini">Yakini</string>
<string name="zagadra">Zagadra</string>
<string name="uni1">Universe 1</string>
<string name="uni20">Universe 20</string>
<string name="uni30">Universe 30</string>
<string name="uni35">Universe 35</string>
<string name="uni44">Universe 44</string>
<!-- Mission names -->
<string name="mission_attack">Attack</string>
<string name="mission_transport">Transport</string>
<string name="mission_deploy">Deployment</string>
<string name="mission_espionage">Espionage</string>
<string name="mission_colonize">Colonize</string>
<string name="mission_harvest">Harvest</string>
<string name="mission_moon_destruction">Moon Dest.</string>
<string name="mission_expedition">Expedition</string>
<string name="please_wait">Please wait&#8230;</string>
<string name="select_an_account">Select an existing account here</string>
<string name="error_while_loading">Error while loading list</string>
<!-- Costs -->
<string name="cost_metal">%1$d m</string>
<string name="cost_crystal">%1$d c</string>
<string name="cost_deuterium">%1$d d</string>
<string name="buildable">Build</string>
<string name="disabled">Disabled</string>
<string name="impossible">Impossible</string>
</resources>