<?xml version="1.0" encoding="utf-8"?><!--
    Copyright 2014 Alexander Wang
    
    This file is part of Ogame on Android.

    Ogame on Android is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    Ogame on Android is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.

    You should have received a copy of the GNU General Public License
    along with Ogame on Android.  If not, see <http://www.gnu.org/licenses/>.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="false">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <!--Do not load the ImageView for the background here, since it -->
    <!--will occur on the UI thread. We'll be making a lengthier process-->
    <!--to load the nasa_hubble background-->

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="4"
            android:orientation="vertical">

            <EditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_middle_margin"
                android:background="@drawable/btn_corner"
                android:ems="10"
                android:hint="@string/username"
                android:padding="5dp" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_middle_margin"
                android:background="@drawable/btn_corner"
                android:ems="10"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:padding="5dp" />

            <EditText
                android:id="@+id/lang"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_middle_margin"
                android:background="@drawable/btn_corner"
                android:ems="10"
                android:hint="@string/lang"
                android:padding="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_middle_margin"
                android:background="@drawable/btn_corner"
                android:orientation="horizontal"
                android:padding="5dp">

                <Spinner
                    android:id="@+id/uniSelect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:prompt="@string/universe" />

                <CheckBox
                    android:id="@+id/pw_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_gravity="start"
                    android:text="@string/show_password_checkbox" />

            </LinearLayout>

            <com.wikaba.ogapp.views.ButtonRectangle
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/default_middle_margin"
                android:text="@string/login"
                app:background="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_middle_margin"
                android:background="@drawable/btn_corner"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:text="@string/existing_accounts"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <Spinner
                    android:id="@+id/existingAccList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:prompt="@string/existing_accounts" />
            </LinearLayout>

            <View
                android:layout_width="1px"
                android:layout_height="1px"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <requestFocus />
            </View>
        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="1px"
            android:layout_weight="1" />
    </LinearLayout>
</FrameLayout>
