<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <android.support.v4.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_gravity="top"
                android:background="@color/colorPrimary"
                android:minHeight="?attr/actionBarSize"
                android:textColor="@color/white"
                app:layout_collapseMode="pin"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

            <FrameLayout
                android:id="@+id/container"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white" />
        </LinearLayout>


        <ScrollView
            android:id="@+id/vLeftDrawer"
            android:layout_width="@dimen/navigation_drawer_width"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="@dimen/navigation_drawer_width"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/metal_main"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/main_left"
                        android:clickable="true"
                        android:orientation="horizontal">

                        <com.wikaba.ogapp.views.IconTextView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:clickable="false"
                            android:focusable="false"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="a"
                            android:textColor="@color/black"
                            android:textSize="24sp"
                            android:visibility="invisible" />

                        <com.devspark.robototextview.widget.RobotoTextView
                            android:id="@+id/metal_main_update"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:clickable="false"
                            android:focusable="false"
                            android:text="metal"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/navigation_drawer_width"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/crystal_main"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/main_left"
                        android:clickable="true"
                        android:orientation="horizontal">

                        <com.wikaba.ogapp.views.IconTextView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:clickable="false"
                            android:focusable="false"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="a"
                            android:textColor="@color/black"
                            android:textSize="24sp"
                            android:visibility="invisible" />

                        <com.devspark.robototextview.widget.RobotoTextView
                            android:id="@+id/crystal_main_update"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:clickable="false"
                            android:focusable="false"
                            android:text="crystal"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="@dimen/navigation_drawer_width"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/deuterium_main"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/main_left"
                        android:clickable="true"
                        android:orientation="horizontal">

                        <com.wikaba.ogapp.views.IconTextView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:clickable="false"
                            android:focusable="false"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="a"
                            android:textColor="@color/black"
                            android:textSize="24sp"
                            android:visibility="invisible" />

                        <com.devspark.robototextview.widget.RobotoTextView
                            android:id="@+id/deuterium_main_update"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:clickable="false"
                            android:focusable="false"
                            android:text="deuterium"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/navigation_drawer_width"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/main"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/main_left"
                        android:clickable="true"
                        android:orientation="horizontal">

                        <com.wikaba.ogapp.views.IconTextView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:clickable="false"
                            android:focusable="false"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="a"
                            android:textColor="@color/black"
                            android:textSize="24sp" />

                        <com.devspark.robototextview.widget.RobotoTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:clickable="false"
                            android:focusable="false"
                            android:text="@string/overview"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/navigation_drawer_width"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/resource"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/main_left"
                        android:clickable="true"
                        android:orientation="horizontal">

                        <com.wikaba.ogapp.views.IconTextView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:clickable="false"
                            android:focusable="false"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="b"
                            android:textColor="@color/black"
                            android:textSize="24sp" />

                        <com.devspark.robototextview.widget.RobotoTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:clickable="false"
                            android:focusable="false"
                            android:text="@string/resources"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/navigation_drawer_width"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/building"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/main_left"
                        android:clickable="true"
                        android:orientation="horizontal">

                        <com.wikaba.ogapp.views.IconTextView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:clickable="false"
                            android:focusable="false"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="c"
                            android:textColor="@color/black"
                            android:textSize="24sp" />

                        <com.devspark.robototextview.widget.RobotoTextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:clickable="false"
                            android:focusable="false"
                            android:text="@string/buildings"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/navigation_drawer_width"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/research"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/main_left"
                        android:clickable="true"
                        android:orientation="horizontal">

                        <com.wikaba.ogapp.views.IconTextView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:clickable="false"
                            android:focusable="false"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="d"
                            android:textColor="@color/black"
                            android:textSize="24sp" />

                        <com.devspark.robototextview.widget.RobotoTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:clickable="false"
                            android:focusable="false"
                            android:text="@string/researchs"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/navigation_drawer_width"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/shipyard"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/main_left"
                        android:clickable="true"
                        android:orientation="horizontal">

                        <com.wikaba.ogapp.views.IconTextView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:clickable="false"
                            android:focusable="false"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="e"
                            android:textColor="@color/black"
                            android:textSize="24sp" />

                        <com.devspark.robototextview.widget.RobotoTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:clickable="false"
                            android:focusable="false"
                            android:text="@string/shipyard"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="@dimen/navigation_drawer_width"
                    android:layout_height="50dp"
                    android:background="@color/white"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/defense"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:background="@drawable/main_left"
                        android:clickable="true"
                        android:orientation="horizontal">

                        <com.wikaba.ogapp.views.IconTextView
                            android:layout_width="40dp"
                            android:layout_height="40dp"
                            android:layout_gravity="center_vertical|center_horizontal"
                            android:clickable="false"
                            android:focusable="false"
                            android:gravity="center_vertical|center_horizontal"
                            android:text="f"
                            android:textColor="@color/black"
                            android:textSize="24sp" />

                        <com.devspark.robototextview.widget.RobotoTextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="1"
                            android:clickable="false"
                            android:focusable="false"
                            android:text="@string/defenses"
                            android:textColor="@color/black" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </android.support.v4.widget.DrawerLayout>
</LinearLayout>